made css changes to the header. fixed spacing and alignment issues. header complete

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -66,23 +66,22 @@ h1, h2, h3, h4, h5 {
 /* begin styling */
 
 .container{
-    max-width: 90%;
     margin: auto;
-    border: 1px solid red;
+    width: 1024px;
 }
 
 .header{
-    max-width: 90%;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 40px 0 15px 0;
+    margin: 40px 0px 25px 0px;
 }
 
 nav{
-    width: 75%;
+    width: 700px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 nav a{
@@ -91,6 +90,49 @@ nav a{
 }
 
 main{
-    max-width: 90%;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+main img{
+    width: 1024px;
+}
+.cards{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+.card{
+    background: rgb(168, 167, 167);
+    max-width: 45%;
+    margin: 15px;
+    padding: 15px;
+    border: 1px solid black;
+}
+
+.card h2{
+    margin: 10px;
+}
+
+.card p{
+    margin: 10px;
+}
+
+.card button{
+    margin: 10px;
+}
+
+.bottom{
+    display: flex;
+}
+
+.bottom-text{
+    max-width: 50%;
+}
+
+.bottom-img{
+    max-width: 50%;
 }
